# iranian-calendar

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  standalone.py
.github/workflows/: tests.yml
data/: conversion_table.csv  conversion_table.json  reference_table.json
ic/: __init__.py  cli.py  config.py  conversions.py  core.py  leap.py
ic/tests/: run_tests.py  test_conversions.py  test_core.py  test_leap.py
