[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iranian-calendar"
version = "1.0.0"
description = "Iranian Calendar (IC) - Solar calendar with epoch at 3000 BCE"
authors = [
    {name = "Alborz Teymoorzadeh", email = "alborz@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["calendar", "persian", "iranian", "solar", "hijri", "IC"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ic = "ic.cli:main"

[tool.setuptools]
packages = ["ic"]
